# notes-backend

./: .env.example  Dockerfile  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
src/apps/notes/: admin.py  apps.py  models.py  urls.py
src/apps/notes/api/: routes.py  serializers.py  views.py
src/apps/notes/migrations/: 0001_initial.py  0002_alter_notesmodel_color_id.py  0002_alter_notesmodel_date_alter_notesmodel_endtime_and_more.py
src/apps/notes/templates/: index.html
src/core/: urls.py
src/core/settings/: base.py  development.py  production.py
